--- a/packages/frontend/app/globals.css
+++ b/packages/frontend/app/globals.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  height: 100%;
+@layer base {
+  html {
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  html,
+  body {
+    height: 100%;
+  }
 }
